# NN-Acceleration

./: README.md
CUDA-NN/: Makefile  compile_commands.json  moreland.pal
CUDA-NN/data/: 2080_Efficiency.txt  2080_raw_cifar_energy.txt  2080_raw_cifar_flops.txt  3d1.txt  3d2.txt  DLA_CUDA.txt  Jetson_Efficiency.txt  Jetson_raw_cifar_energy.txt  Jetson_raw_cifar_flops.txt  cpu_raw_cifar_flops.txt  l1_pruning_cifar.txt  l2_pruning_cifar.txt  precision.txt
CUDA-NN/figures/: 3d.eps  acc.eps  dla.eps  efficiency.eps  energy.eps  flops_line.eps  precision.eps  pruning.eps  pruning_acc.eps  pruning_flops.eps
CUDA-NN/images/: 10.ppm  9.ppm
CUDA-NN/include/: MeasurementSeries.hpp  argparse.hpp  common.h  dtime.hpp
CUDA-NN/python/: export_weights.py  test_net.py
CUDA-NN/scripts/: 3dplot.gp  acc.gp  dla.gp  efficiency.gp  energy.gp  energy_measurement.sh  flops_line.gp  flops_measurement.sh  fps.gp  precision.gp  pruning_flops.gp
CUDA-NN/source/: ConvLayer.cu  main.cpp  npy.cpp
Conv/: CMakeLists.txt  conv_1.cu  conv_2.cu  gemm.txt  gen_img.py  generate_img.sh  imp_gemm.txt  moreland.pal  plot.gp  wino2.txt  winograd.txt
Conv/figures/: gemm-winograd.eps
Pruning/: L1_params.txt  L2_params.txt  export_weights.py  flops_compute.py  myresnet.py  prning_resnet_imagenet.py
SGEMM/: Makefile  plot.gp  run.sh  test.cu  utils.cu
SGEMM/data/: res_0.txt  res_1.txt  res_10.txt  res_11.txt  res_2.txt  res_3.txt  res_4.txt  res_5.txt  res_6.txt  res_7.txt  res_8.txt  res_9.txt
SGEMM/figures/: Avoid_BC.eps  GEMM.eps  Prefetching.eps  Registers.eps  Tiling.eps  sgemm.eps
(+1 files in other folders)
